<resources>
    <string name="app_name">Unsplash</string>

    <string name="main_exercise_31">Class 3 - Exercise 1</string>
    <string name="main_exercise_32">Class 3 - Exercise 2</string>
    <string name="main_exercise_33">Class 3 - Exercise 3</string>
    <string name="main_exercise_34">Class 3 - Exercise 4</string>

    <string name="main_details">Navigate to details</string>

    <!-- Image Details -->
    <string name="details_camera_title">Camera</string>
    <string name="details_camera_default">NIKON D3200</string>

    <string name="details_aperture_title">Aperture</string>
    <string name="details_aperture_default">f/5.0</string>

    <string name="details_focal_title">Focal Length</string>
    <string name="details_focal_default">18.0mm</string>

    <string name="details_shutter_title">Shutter Speed</string>
    <string name="details_shutter_default">1/125s</string>

    <string name="details_iso_title">ISO</string>
    <string name="details_iso_default">100</string>

    <string name="details_dimensions_title">Dimensions</string>
    <string name="details_dimensions_default">3906 x 4882</string>

    <string name="details_views_title">Views</string>
    <string name="details_views_default">8.8M</string>

    <string name="details_downloads_title">Downloads</string>
    <string name="details_downloads_default">99.1K</string>

    <string name="details_likes_title">Likes</string>
    <string name="details_likes_default">1.8K</string>

    <!-- Content Description -->
    <string name="description_image_preview">Preview image</string>
    <string name="image_overlay_pin_text">Barcelona, Spain</string>
    <string name="barcelona">Barcelona</string>
    <string name="spain">Spain</string>
</resources>