<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/layout_practitioner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/description_image_preview"
            android:scaleType="centerCrop"
            android:src="@drawable/bcn_la_sagrada_familia" />

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginTop="-240dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:src="@drawable/baseline_location_on_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:text="@string/image_overlay_pin_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <!-- Camera -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <com.google.android.material.imageview.ShapeableImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/imvCircular"
                            android:layout_width="46dp"
                            android:layout_height="46dp"
                            android:src
                                ="@drawable/user"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="7dp"
                            app:layout_constraintEnd_toStartOf="@+id/imvCircularWithStroke"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent"
                            app:shapeAppearanceOverlay="@style/Circular" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="16dp"
                        android:text="@string/details_camera_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                </LinearLayout>


                <!-- Aperture -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:importantForAccessibility="no"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/baseline_download_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:importantForAccessibility="no"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/baseline_favorite_border_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:importantForAccessibility="no"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/baseline_bookmark_border_24" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Camera -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/details_camera_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:text="@string/details_camera_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <!-- Aperture -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/details_aperture_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:text="@string/details_aperture_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Focal Length -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/details_focal_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:text="@string/details_focal_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <!-- Shutter Speed -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/details_shutter_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:text="@string/details_shutter_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- ISO -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/details_iso_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:text="@string/details_iso_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <!-- Dimensions -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/details_dimensions_title"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:text="@string/details_dimensions_default"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light" />

            <include layout="@layout/image_info" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ExtraText">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:text="@string/barcelona"
                        android:textColor="@color/white"
                        android:theme="@style/Theme.MaterialComponents" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:text="@string/spain"
                        android:textColor="@color/white"
                        android:theme="@style/Theme.MaterialComponents"
                        tools:ignore="RtlSymmetry" />
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>

